<resources>
    <string name="app_name">OGSN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sing_in">Sign In</string>
    <string name="loading">Loading</string>
    <string name="error">ERROR</string>
    <string name="success">Success</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
